@@ -73,6 +73,8 @@ class BtRuntime;
 class PeerStorage;
 #endif // ENABLE_BITTORRENT
 
+typedef int32_t gid_t;
+
 class RequestGroup {
 public:
   enum HaltReason {
@@ -81,9 +83,9 @@ public:
     USER_REQUEST
   };
 private:
-  static int32_t _gidCounter;
+  static gid_t _gidCounter;
 
-  int32_t _gid;
+  gid_t _gid;
 
   SharedHandle<Option> _option;
 
@@ -155,13 +157,13 @@ private:
   // example, downloads generated by PostDownloadHandler), this field
   // has the GID of generated RequestGroups. empty list means there is
   // no such RequestGroup.
-  std::vector<int32_t> _followedByGIDs;
+  std::vector<gid_t> _followedByGIDs;
 
   // If this download is a part of another download(for example,
   // downloading torrent file described in Metalink file), this field
   // has the GID of parent RequestGroup. 0 means this is a parent
   // RequestGroup.
-  int32_t _belongsToGID;
+  gid_t _belongsToGID;
 
   RequestGroupMan* _requestGroupMan;
 
@@ -244,7 +246,7 @@ public:
     return _numConcurrentCommand;
   }
 
-  int32_t getGID() const
+  gid_t getGID() const
   {
     return _gid;
   }
@@ -478,17 +480,17 @@ public:
     }
   }
 
-  const std::vector<int32_t>& followedBy() const
+  const std::vector<gid_t>& followedBy() const
   {
     return _followedByGIDs;
   }
 
-  void belongsTo(int32_t gid)
+  void belongsTo(gid_t gid)
   {
     _belongsToGID = gid;
   }
 
-  int32_t belongsTo() const
+  gid_t belongsTo() const
   {
     return _belongsToGID;
   }
@@ -500,7 +502,7 @@ public:
 
   static void resetGIDCounter() { _gidCounter = 0; }
 
-  static int32_t newGID();
+  static gid_t newGID();
 };
 
 } // namespace aria2
